# l9-ci-core

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .mega-linter.yml  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGE_SUMMARY.md  CONTRIBUTING.md  MANIFEST.sha256  README.md  ROADMAP.md  SECURITY.md  VALIDATION.md  mypy.ini  pyproject.toml  requirements-ci.txt  ruff.toml  sonar-project.properties
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.l9/: architecture.yaml  artifact-protocol.yaml  governance-contract.yaml  ownership.yaml  publication-contract.yaml  repo-spec.yaml  sdk-compatibility.yaml
docs/: ACTION_PIN_INVENTORY.md  AGENT_REVIEW_LOOP.md  AGENT_REVIEW_PAYLOAD.md  AST_GOVERNANCE.md  BOOTSTRAP_RUNTIME.md  CLASSIFIER_CONTRACT.md  GOVERNANCE_APPROVAL.md  GOVERNANCE_POLICY.md  LOCAL_FIRST_PIPELINE.md  NIGHTLY_WORKFLOW.md  NODE_PIPELINE.md  PR-A-CONSOLIDATION-REPORT.md  PRE_COMMIT_CI.md  RELEASE_WORKFLOW.md  REQUIRED_JOBS.md  SDK_INSTALL.md  SHADOW_MODE_ROLLOUT.md  THRESHOLD_GOVERNANCE.md  TRIO_WIRING.md  WORKFLOW_CONTRACT.md  adr-001-sha-pinning.md  architecture.md  artifact-protocol.md  consumer-lint-test.md  v1-compatibility.md
requirements/: bootstrap.in
schemas/: action-pins-lock.schema.json  agent-review-payload.schema.json  agent-review-report.schema.json  bootstrap-gate-result.schema.json  bootstrap-manifest.schema.json  changed-files.schema.json  ci-dependency-baseline.schema.json  ci-dependency-exceptions.schema.json  ci-summary.schema.json  control-plane-migration.schema.json  download-integrity.schema.json  (+8 more)
(+326 files in other folders)
