[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "l9-ci-core"
version = "1.0.0"
description = "L9 bootstrap security gate validators"
requires-python = ">=3.11"
dependencies = [
    "ruamel.yaml>=0.18,<0.19",
    "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q"
